# docs/swagger.json
@@ -12,8 +12,8 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/patient-data-no-auth": {
-            "post": {
+        "/patient-data": {
+            "get": {
                 "description": "Checks for a matching id in the databse and returns data for that id",
                 "consumes": [
                     "application/json"
@@ -56,8 +56,8 @@
                 }
             }
         },
-        "/patient-list-no-auth": {
-            "post": {
+        "/patient-list": {
+            "get": {
                 "description": "Finds username in database and retrieves all patients for that user",
                 "consumes": [
                     "application/json"
